--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,16 @@
 # [START gae_quickstart_yaml]
 runtime: nodejs14
+service: trends
 instance_class: F2
+automatic_scaling:
+  min_instances: 1
+  max_instances: 3
+  min_pending_latency: 30ms
+  max_pending_latency: automatic
+  max_concurrent_requests: 50
+liveness_check:
+  path: "/stream/alive"
+  check_interval_sec: 30
+  timeout_sec: 3
+  failure_threshold: 2
+  success_threshold: 2
